...
        networkProtectionButton.sendAction(on: .leftMouseDown)
        networkProtectionButton.setAccessibilityIdentifier("NavigationBarViewController.vpnButton")
        networkProtectionButton.setAccessibilityTitle(UserText.networkProtectionButtonTooltip)
        networkProtectionButton.toolTip = UserText.networkProtectionButtonTooltip

        downloadsButton.sendAction(on: .leftMouseDown)
        downloadsButton.setAccessibilityIdentifier("NavigationBarViewController.downloadsButton")
        downloadsButton.setAccessibilityTitle(ShortcutTooltip.downloads.value)
        downloadsButton.toolTip = ShortcutTooltip.downloads.value

        shareButton.sendAction(on: .leftMouseDown)
        shareButton.setAccessibilityIdentifier("NavigationBarViewController.shareButton")
        shareButton.setAccessibilityTitle(UserText.shareMenuItem)
...
