...
    }

    func applyCustomizationForAddressBar(_ state: MobileCustomization.State) {
        omniBar.refreshCustomizableButton()
        if state.isEnabled {
            omniBar.barView.customizableButton.menu = UIMenu(children: [
                UIAction(title: "Customize", image: DesignSystemImages.Glyphs.Size16.options) { [weak self] _ in
                    self?.segueToCustomizeAddressBarSettings()
                }
            ])
        } else {
            omniBar.barView.customizableButton.menu = nil
        }
...
